<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/care2" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:drawableTint="#959595"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        android:textColor="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/password"
        android:drawableEnd="@drawable/visibility"
        android:drawablePadding="7dp"
        android:drawableTint="#959595"
        android:ems="10"
        android:hint="@string/edt_senha"
        android:inputType="textPassword"
        android:textColor="#5A5A5A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/switch1"
        android:textColor="#5A5A5A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/button"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/txv_esqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/txv_esqueci"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#5A5A5A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />

    <TextView
        android:id="@+id/txv_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txv_cadastro"
        android:textColor="#5A5A5A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_cadastro" />


</androidx.constraintlayout.widget.ConstraintLayout>